# dna-rna-sequence

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/: funciones.h
src/: CMakeLists.txt  app_main.cpp  logic.cpp  main  main.cpp  sequences.txt
tests/: CMakeLists.txt  sequences.txt  test_ejemplo.cpp  tests.cpp
